@@ -77,6 +77,21 @@ class Sale extends Model
 			//Update stock quantity
 			$item_data = array('quantity'=>$cur_item_info->quantity - $item['quantity']);
 			$this->Item->save($item_data,$item['item_id']);
+			
+			//Ramel Inventory Tracking
+			//Inventory Count Details
+			$qty_buy = -$item['quantity'];
+			$sale_remarks ='POS '.$sale_id;
+			$inv_data = array
+			(
+				'trans_date'=>date('Y-m-d H:i:s'),
+				'trans_items'=>$item['item_id'],
+				'trans_user'=>$employee_id,
+				'trans_comment'=>$sale_remarks,
+				'trans_inventory'=>$qty_buy
+			);
+			$this->Inventory->insert($inv_data);
+			//------------------------------------Ramel
 
 			$customer = $this->Customer->get_info($customer_id);
  			if ($customer_id == -1 or $customer->taxable)
