@@ -50,7 +50,8 @@ function init_table_sorting()
 			headers:
 			{
 				0: { sorter: false},
-				8: { sorter: false}
+				8: { sorter: false},
+				9: { sorter: false}
 			}
 
 		});
