@@ -78,6 +78,29 @@ INSERT INTO `phppos_employees` (`username`, `password`, `person_id`) VALUES ('ad
 -- --------------------------------------------------------
 
 -- 
+-- Table structure for table `phppos_inventory`
+-- 
+
+CREATE TABLE `phppos_inventory` (
+  `trans_id` int(11) NOT NULL AUTO_INCREMENT,
+  `trans_items` int(11) NOT NULL DEFAULT '0',
+  `trans_user` int(11) NOT NULL DEFAULT '0',
+  `trans_date` timestamp NOT NULL DEFAULT CURRENT_TIMESTAMP,
+  `trans_comment` text NOT NULL,
+  `trans_inventory` int(11) NOT NULL DEFAULT '0',
+  PRIMARY KEY (`trans_id`),
+  KEY `phppos_inventory_ibfk_1` (`trans_items`),
+  KEY `phppos_inventory_ibfk_2` (`trans_user`)
+) ENGINE=InnoDB DEFAULT CHARSET=latin1 AUTO_INCREMENT=1 ;
+
+-- 
+-- Dumping data for table `phppos_inventory`
+-- 
+
+
+-- --------------------------------------------------------
+
+-- 
 -- Table structure for table `phppos_items`
 -- 
 
@@ -394,6 +417,13 @@ ALTER TABLE `phppos_customers`
 -- 
 ALTER TABLE `phppos_employees`
   ADD CONSTRAINT `phppos_employees_ibfk_1` FOREIGN KEY (`person_id`) REFERENCES `phppos_people` (`person_id`);
+
+-- 
+-- Constraints for table `phppos_inventory`
+-- 
+ALTER TABLE `phppos_inventory`
+  ADD CONSTRAINT `phppos_inventory_ibfk_1` FOREIGN KEY (`trans_items`) REFERENCES `phppos_items` (`item_id`),
+  ADD CONSTRAINT `phppos_inventory_ibfk_2` FOREIGN KEY (`trans_user`) REFERENCES `phppos_employees` (`person_id`);
 
 -- 
 -- Constraints for table `phppos_items`
